Adjusted simple list styles to avoid horizontal overflow

--- a/src/styles/bootstrap-custom/_list-group.less
+++ b/src/styles/bootstrap-custom/_list-group.less
@@ -101,9 +101,13 @@
   &.list-group-simple {
     border-left: 0;
     border-right: 0;
-    margin-left: -1em;
-    margin-right: -1em;
+    margin-left: -0.5em;
+    margin-right: -0.5em;
     .list-group-item {
+      border-right: 0;
+      border-left: 0;
+      padding-left: 0;
+      padding-right: 0;
       &:first-child {
         border-top: 0;
         &.active:after {
